syntax = "proto3";

package asset_service;

option go_package = "asset-service/proto";

import "google/protobuf/timestamp.proto";

service AssetService {
  rpc CreateAsset(CreateAssetRequest) returns (AssetResponse);
  rpc GetAsset(GetAssetRequest) returns (AssetResponse);
  rpc ListAssets(ListAssetsRequest) returns (ListAssetsResponse);
  rpc UpdateAsset(UpdateAssetRequest) returns (AssetResponse);
  rpc DeleteAsset(DeleteAssetRequest) returns (Empty);

  rpc CreateIssue(CreateIssueRequest) returns (IssueResponse);
  rpc GetIssue(GetIssueRequest) returns (IssueResponse);
  rpc ListIssuesByAsset(ListIssuesRequest) returns (ListIssuesResponse);
  rpc UpdateIssue(UpdateIssueRequest) returns (IssueResponse);
  rpc DeleteIssue(DeleteIssueRequest) returns (Empty);

  rpc CreateNote(CreateNoteRequest) returns (NoteResponse);
  rpc ListNotes(ListNotesRequest) returns (ListNotesResponse);
  rpc UpdateNote(UpdateNoteRequest) returns (NoteResponse);
  rpc DeleteNote(DeleteNoteRequest) returns (Empty);

  rpc CreateAssetClass(CreateAssetClassRequest) returns (AssetClassResponse);
  rpc ListAssetClasses(Empty) returns (ListAssetClassesResponse);
  rpc UpdateAssetClass(UpdateAssetClassRequest) returns (AssetClassResponse);
  rpc DeleteAssetClass(DeleteMetadataRequest) returns (Empty);

  rpc CreateCriticality(CreateCriticalityRequest) returns (CriticalityResponse);
  rpc UpdateCriticality(UpdateCriticalityRequest) returns (CriticalityResponse);
  rpc DeleteCriticality(DeleteMetadataRequest) returns (Empty);

  rpc CreateDeviceType(CreateDeviceTypeRequest) returns (DeviceTypeResponse);
  rpc ListDeviceTypes(Empty) returns (ListDeviceTypesResponse);
}

message Empty {}

message DeleteMetadataRequest {
  int32 id = 1;
}

message AssetResponse {
  int32 id = 1;
  string name = 2;
  string asset_class = 3;
  int32 asset_class_id = 4;
  int32 criticality_id = 5;
  string criticality = 6;
  google.protobuf.Timestamp created_at = 7;
  optional DeviceDetail device_info = 8;
  optional NetworkDetail network_info = 9;
  optional SoftwareDetail software_info = 10;
}

message CreateAssetRequest {
  string name = 1;
  int32 asset_class_id = 2;
  int32 criticality_id = 3;
  optional DeviceDetail device_info = 4;
  optional NetworkDetail network_info = 5;
  optional SoftwareDetail software_info = 6;
}

message GetAssetRequest { int32 id = 1; }
message ListAssetsRequest { int32 limit = 1; int32 offset = 2; }
message ListAssetsResponse { repeated AssetResponse assets = 1; }
message UpdateAssetRequest {
  int32 id = 1;
  optional string name = 2;
  optional int32 asset_class_id = 3;
  optional int32 criticality_id = 4;
}
message DeleteAssetRequest { int32 id = 1; }

message IssueResponse {
  int32 id = 1;
  int32 asset_id = 2;
  int32 issue_type_id = 3;
  string issue_type = 4;
  string category = 5;
  int32 status_id = 6;
  string status = 7;
  int32 issue_source_id = 8;
  string issue_source = 9;
  string external_issue_id = 10;
  optional string description = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message CreateIssueRequest {
  int32 asset_id = 1;
  int32 issue_type_id = 2;
  int32 status_id = 3;
  int32 issue_source_id = 4;
  string external_issue_id = 5;
  optional string description = 6;
}

message GetIssueRequest { int32 id = 1; }
message ListIssuesRequest { int32 asset_id = 1; }
message ListIssuesResponse { repeated IssueResponse issues = 1; }
message UpdateIssueRequest {
  int32 id = 1;
  optional int32 issue_type_id = 2;
  optional int32 status_id = 3;
  optional string description = 4;
  optional string external_issue_id = 5;
}
message DeleteIssueRequest { int32 id = 1; }

message NoteResponse {
  int32 id = 1;
  int32 asset_id = 2;
  optional int32 asset_issue_id = 3;
  int32 author_user_id = 4;
  string content = 5;
  google.protobuf.Timestamp created_at = 6;
}

message CreateNoteRequest {
  int32 asset_id = 1;
  optional int32 asset_issue_id = 2;
  int32 author_user_id = 3;
  string content = 4;
}

message ListNotesRequest { int32 asset_id = 1; }
message ListNotesResponse { repeated NoteResponse notes = 1; }
message UpdateNoteRequest {
  int32 id = 1;
  optional int32 asset_issue_id = 2;
  optional string content = 3;
}
message DeleteNoteRequest { int32 id = 1; }

message AssetClassResponse { int32 id = 1; string name = 2; string definition = 3; }
message CreateAssetClassRequest { string name = 1; string definition = 2; }
message ListAssetClassesResponse { repeated AssetClassResponse classes = 1; }
message UpdateAssetClassRequest { int32 id = 1; optional string name = 2; optional string definition = 3; }

message CriticalityResponse { int32 id = 1; string name = 2; int32 value = 3; }
message CreateCriticalityRequest { string name = 1; int32 value = 2; }
message UpdateCriticalityRequest { int32 id = 1; optional string name = 2; optional int32 value = 3; }

message DeviceTypeResponse { int32 id = 1; string name = 2; int32 asset_class_id = 3; }
message CreateDeviceTypeRequest { int32 asset_class_id = 1; string name = 2; }
message ListDeviceTypesResponse { repeated DeviceTypeResponse device_types = 1; }

message DeviceDetail {
  optional string hostname = 1;
  optional int32 device_type_id = 2;
  optional string ip_address = 3;
  optional string mac_address = 4;
  optional string os_name = 5;
  optional string os_version = 6;
  optional string hardware_cpe = 7;
}

message NetworkDetail {
  optional string management_ip = 1;
  optional int32 device_type_id = 2;
  optional string mac_address = 3;
  optional string firmware_version = 4;
  optional string model_number = 5;
  optional string serial_number = 6;
  optional int32 total_ports = 7;
}

message SoftwareDetail {
  optional string name = 1;
  optional string os_name = 2;
  optional string os_version = 3;
  optional string version = 4;
  optional string vendor = 5;
  optional string software_cpe = 6;
}
